# cudafm

./: .gitignore  ==PROF== Profiling "sumColumns": 0%....5  CMakeLists.txt  Data.cpp  Data.h  common.h  convert.cpp  data.cpp  data.h  fm.cpp  fm.cu  fm.h  fm_data.h  fm_learn.cpp  fm_learn.cu  fm_learn.h  fm_learn_sgd.cpp  fm_learn_sgd.h  fm_learn_sgd_element.h  fm_sgd.cpp  fm_sgd.cu  gpufm.cu  gpufm_sgd.h  job-serial  main.cu  plan.txt  serialfm.h  serialfm_sgd.h  slurm-8166033.out  test.cpp
data/: ml-tag.test.y
scripts/: generate_libfm_test_data.py  libfm_test_data_small.txt
util/: cmdline.h  fmatrix.h  matrix.h  random.cpp  random.h
